# sdf-matter-converter

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  converter.cpp  main.cpp  shell.nix
.github/workflows/: cmake-multi-platform.yml  convert-matter-to-sdf.yml  convert-sdf-to-matter.yml
doc/html/: annotated.html  classes.html  converter_8h.html  converter_8h_source.html  dir_19f311372aec8536ea9e84832fd565b8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b734e2fe493b027842dc98d3d46d2f48.html  dir_d041a6fa647511a0472a5908baf90846.html  dir_f7ffcf6af1827147f4f41bfd0cf4b7be.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  index.html  mapping_8h.html  mapping_8h_source.html  matter_8h.html  matter_8h_source.html  menudata.js  sdf_8h.html  sdf_8h_source.html  structaccessType-members.html  structaccessType.html  structargType-members.html  structargType.html  structattributeType-members.html  structattributeType.html  structbitmapType-members.html  structbitmapType.html  structchannelType-members.html  structchannelType.html  structcliType-members.html  structcliType.html  structclientType-members.html  (+56 more)
doc/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  (+41 more)
html/: annotated.html  classes.html  converter_8h_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b734e2fe493b027842dc98d3d46d2f48.html  files.html  functions.html  graph_legend.html  md_README.html  pages.html  structaccessType-members.html  structargType-members.html  structattributeType.html  structbitmapType-members.html  structbitmapType.html  structchannelType.html  structcliType-members.html  structcliType.html  structclientType-members.html  structclientType.html  structclusterType.html  structcommandType-members.html  structcommonQualityType.html  structdataQualityType-members.html  structdataQualityType.html  structdeviceType.html  structeventFieldType.html  structeventType.html  structfeatureBitType.html  structfieldType.html  structgroupType.html  structinfoBlockType-members.html  structjsoItemType-members.html  structjsoItemType.html  structolderType-members.html  structsdfActionType.html  structsdfEventType-members.html  structsdfMappingType-members.html  structsdfModelType-members.html  structsdfObjectType-members.html  (+7 more)
html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_c.js  pages_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
include/: converter.h  validator.h
latex/: annotated.tex  files.tex  hierarchy.tex  matter_8h.tex  md_README.tex  refman.tex  structaccessType.tex  structargType.tex  structattributeType.tex  structbitmapType.tex  structchannelType.tex  structcliType.tex  structclientType.tex  structclusterType.tex  structcommandType.tex  structcommonQualityType.eps  structcommonQualityType.tex  structdataQualityType.eps  structdataQualityType.tex  structdeviceType.tex  structdomainType.tex  structenumType.tex  structeventFieldType.tex  structeventType.tex  structfeatureBitType.tex  structfieldType.tex  structglobalAttributeType.tex  structgroupType.tex  structinfoBlockType.tex  structjsoItemType.tex  structnamespaceType.tex  structolderType.tex  structsdfActionType.eps  structsdfActionType.tex  structsdfEventType.eps  structsdfEventType.tex  structsdfMappingType.tex  structsdfModelType.tex  structsdfObjectType.eps  structsdfObjectType.tex  (+7 more)
lib/: converter.cpp  validator.cpp
lib/converter/: CMakeLists.txt
lib/converter/include/: converter.h  mapping.h  matter.h  matter_constants.h  matter_to_sdf.h  sdf.h  sdf_to_matter.h
lib/converter/src/: converter.cpp  mapping.cpp  matter.cpp  matter_to_sdf.cpp  sdf.cpp  sdf_to_matter.cpp
lib/validator/: CMakeLists.txt
lib/validator/include/: validator.h
lib/validator/src/: validator.cpp
src/: main.cpp  main.h
